--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = m5stack-atom
 framework = arduino
+board_build.partitions = partitions.csv
 lib_deps =
-    m5stack/M5Unified@^0.2.7
-    https://github.com/m5stack/ATOM-PRINTER.git
+	m5stack/M5Unified@^0.2.7
+	https://github.com/m5stack/ATOM-PRINTER.git
+	densaugeo/base64@^1.4.0
